--- a/series.conf
+++ b/series.conf
@@ -13494,6 +13494,7 @@
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/0485-drm-bridge_connector-stop-filtering-events-in-drm_br.patch
 	patches.suse/0486-drm-bridge_connector-implement-oob_hotplug_event.patch
+	patches.suse/0487-drm-tegra-Remove-surplus-else-after-return.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
 	patches.suse/drm-i915-Add-missing-GSCCS-documentation.patch
