drm/tegra: Remove two unused function declarations (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13495,6 +13495,7 @@
 	patches.suse/0485-drm-bridge_connector-stop-filtering-events-in-drm_br.patch
 	patches.suse/0486-drm-bridge_connector-implement-oob_hotplug_event.patch
 	patches.suse/0487-drm-tegra-Remove-surplus-else-after-return.patch
+	patches.suse/0488-drm-tegra-Remove-two-unused-function-declarations.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
 	patches.suse/drm-i915-Add-missing-GSCCS-documentation.patch
