--- a/series.conf
+++ b/series.conf
@@ -13498,6 +13498,7 @@
 	patches.suse/0488-drm-tegra-Remove-two-unused-function-declarations.patch
 	patches.suse/0489-drm-tegra-hub-Increase-buffer-size-to-ensure-all-pos.patch
 	patches.suse/0490-gpu-host1x-Add-locking-in-channel-allocation.patch
+	patches.suse/0491-gpu-host1x-Stop-CDMA-before-suspending.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
 	patches.suse/drm-i915-Add-missing-GSCCS-documentation.patch
