--- a/series.conf
+++ b/series.conf
@@ -13500,6 +13500,7 @@
 	patches.suse/0490-gpu-host1x-Add-locking-in-channel-allocation.patch
 	patches.suse/0491-gpu-host1x-Stop-CDMA-before-suspending.patch
 	patches.suse/0492-gpu-host1x-Enable-system-suspend-callbacks.patch
+	patches.suse/0493-gpu-host1x-Syncpoint-interrupt-sharding.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
 	patches.suse/drm-i915-Add-missing-GSCCS-documentation.patch
