--- a/series.conf
+++ b/series.conf
@@ -13503,6 +13503,7 @@
 	patches.suse/0493-gpu-host1x-Syncpoint-interrupt-sharding.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/0495-drm-tegra-Zero-initialize-iosys_map.patch
+	patches.suse/0496-drm-tegra-gem-Do-not-return-NULL-in-tegra_bo_mmap.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
 	patches.suse/drm-i915-Add-missing-GSCCS-documentation.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
