--- a/series.conf
+++ b/series.conf
@@ -13505,6 +13505,7 @@
 	patches.suse/0495-drm-tegra-Zero-initialize-iosys_map.patch
 	patches.suse/0496-drm-tegra-gem-Do-not-return-NULL-in-tegra_bo_mmap.patch
 	patches.suse/0497-drm-Remove-plane-hsub-vsub-alignment-requirement-for.patch
+	patches.suse/0498-drm-Replace-drm_framebuffer-plane-size-functions-wit.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
 	patches.suse/drm-i915-Add-missing-GSCCS-documentation.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
