drm/i915: define I915 during i915 driver build (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13507,6 +13507,7 @@
 	patches.suse/0497-drm-Remove-plane-hsub-vsub-alignment-requirement-for.patch
 	patches.suse/0498-drm-Replace-drm_framebuffer-plane-size-functions-wit.patch
 	patches.suse/0499-drm-simpledrm-Fix-power-domain-device-link-validity-.patch
+	patches.suse/0500-drm-i915-define-I915-during-i915-driver-build.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
 	patches.suse/drm-i915-Add-missing-GSCCS-documentation.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
