--- a/series.conf
+++ b/series.conf
@@ -13508,6 +13508,7 @@
 	patches.suse/0498-drm-Replace-drm_framebuffer-plane-size-functions-wit.patch
 	patches.suse/0499-drm-simpledrm-Fix-power-domain-device-link-validity-.patch
 	patches.suse/0500-drm-i915-define-I915-during-i915-driver-build.patch
+	patches.suse/0501-drm-i915-display-add-I915-conditional-build-to-intel.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
 	patches.suse/drm-i915-Add-missing-GSCCS-documentation.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
