--- a/series.conf
+++ b/series.conf
@@ -13509,6 +13509,7 @@
 	patches.suse/0499-drm-simpledrm-Fix-power-domain-device-link-validity-.patch
 	patches.suse/0500-drm-i915-define-I915-during-i915-driver-build.patch
 	patches.suse/0501-drm-i915-display-add-I915-conditional-build-to-intel.patch
+	patches.suse/0502-drm-i915-display-add-I915-conditional-build-to-hsw_i.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
 	patches.suse/drm-i915-Add-missing-GSCCS-documentation.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
