--- a/series.conf
+++ b/series.conf
@@ -13512,6 +13512,7 @@
 	patches.suse/0502-drm-i915-display-add-I915-conditional-build-to-hsw_i.patch
 	patches.suse/0503-drm-i915-display-add-I915-conditional-build-to-i9xx_.patch
 	patches.suse/0504-drm-i915-display-add-I915-conditional-build-to-intel.patch
+	patches.suse/0505-drm-i915-display-add-I915-conditional-build-to-intel.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
 	patches.suse/drm-i915-Add-missing-GSCCS-documentation.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
