--- a/series.conf
+++ b/series.conf
@@ -13515,6 +13515,7 @@
 	patches.suse/0505-drm-i915-display-add-I915-conditional-build-to-intel.patch
 	patches.suse/0506-drm-i915-display-add-I915-conditional-build-to-intel.patch
 	patches.suse/0507-drm-i915-display-add-I915-conditional-build-to-intel.patch
+	patches.suse/0508-drm-i915-display-add-I915-conditional-build-to-intel.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
 	patches.suse/drm-i915-Add-missing-GSCCS-documentation.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
