--- a/series.conf
+++ b/series.conf
@@ -13517,6 +13517,7 @@
 	patches.suse/0507-drm-i915-display-add-I915-conditional-build-to-intel.patch
 	patches.suse/0508-drm-i915-display-add-I915-conditional-build-to-intel.patch
 	patches.suse/0509-drm-i915-display-add-I915-conditional-build-to-g4x_d.patch
+	patches.suse/0510-drm-i915-display-add-I915-conditional-build-to-intel.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
 	patches.suse/drm-i915-Add-missing-GSCCS-documentation.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
