--- a/series.conf
+++ b/series.conf
@@ -13520,6 +13520,7 @@
 	patches.suse/0510-drm-i915-display-add-I915-conditional-build-to-intel.patch
 	patches.suse/0511-drm-i915-display-add-I915-conditional-build-to-intel.patch
 	patches.suse/0512-drm-i915-display-add-I915-conditional-build-to-vlv_d.patch
+	patches.suse/0513-drm-i915-display-add-I915-conditional-build-to-i9xx_.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
 	patches.suse/drm-i915-Add-missing-GSCCS-documentation.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
