--- a/series.conf
+++ b/series.conf
@@ -13523,6 +13523,7 @@
 	patches.suse/0513-drm-i915-display-add-I915-conditional-build-to-i9xx_.patch
 	patches.suse/0514-drm-i915-display-add-I915-conditional-build-to-g4x_h.patch
 	patches.suse/0515-drm-i915-display-add-I915-conditional-build-to-intel.patch
+	patches.suse/0516-drm-i915-display-add-I915-conditional-build-to-intel.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
 	patches.suse/drm-i915-Add-missing-GSCCS-documentation.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
