--- a/series.conf
+++ b/series.conf
@@ -13526,6 +13526,7 @@
 	patches.suse/0516-drm-i915-display-add-I915-conditional-build-to-intel.patch
 	patches.suse/0517-drm-i915-display-add-I915-conditional-build-to-intel.patch
 	patches.suse/0518-drm-i915-display-add-I915-conditional-build-to-vlv_d.patch
+	patches.suse/0519-drm-i915-display-Include-i915_active-header-in-front.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
 	patches.suse/drm-i915-Add-missing-GSCCS-documentation.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
