--- a/series.conf
+++ b/series.conf
@@ -13530,6 +13530,7 @@
 	patches.suse/0520-drm-i915-Abstract-display-info-away-during-probe.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
 	patches.suse/drm-i915-Add-missing-GSCCS-documentation.patch
+	patches.suse/0523-drm-i915-lnl-possibility-to-enable-FBC-on-first-thre.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
