drm/i915: convert INTEL_DISPLAY_ENABLED() into a function (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13532,6 +13532,7 @@
 	patches.suse/drm-i915-Add-missing-GSCCS-documentation.patch
 	patches.suse/0523-drm-i915-lnl-possibility-to-enable-FBC-on-first-thre.patch
 	patches.suse/0524-drm-i915-lnl-update-the-supported-plane-formats-with.patch
+	patches.suse/0525-drm-i915-convert-INTEL_DISPLAY_ENABLED-into-a-functi.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
