drm/i915: separate display runtime info init (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13534,6 +13534,7 @@
 	patches.suse/0524-drm-i915-lnl-update-the-supported-plane-formats-with.patch
 	patches.suse/0525-drm-i915-convert-INTEL_DISPLAY_ENABLED-into-a-functi.patch
 	patches.suse/0526-drm-i915-move-display-info-related-macros-to-display.patch
+	patches.suse/0527-drm-i915-separate-display-runtime-info-init.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
