--- a/series.conf
+++ b/series.conf
@@ -13536,6 +13536,7 @@
 	patches.suse/0526-drm-i915-move-display-info-related-macros-to-display.patch
 	patches.suse/0527-drm-i915-separate-display-runtime-info-init.patch
 	patches.suse/0528-drm-i915-separate-subplatform-init-and-runtime-featu.patch
+	patches.suse/0529-drm-i915-Stop-requiring-PLL-index-PLL-ID.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
