drm/i915: Decouple I915_NUM_PLLS from PLL IDs (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13537,6 +13537,7 @@
 	patches.suse/0527-drm-i915-separate-display-runtime-info-init.patch
 	patches.suse/0528-drm-i915-separate-subplatform-init-and-runtime-featu.patch
 	patches.suse/0529-drm-i915-Stop-requiring-PLL-index-PLL-ID.patch
+	patches.suse/0530-drm-i915-Decouple-I915_NUM_PLLS-from-PLL-IDs.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
