--- a/series.conf
+++ b/series.conf
@@ -13538,6 +13538,7 @@
 	patches.suse/0528-drm-i915-separate-subplatform-init-and-runtime-featu.patch
 	patches.suse/0529-drm-i915-Stop-requiring-PLL-index-PLL-ID.patch
 	patches.suse/0530-drm-i915-Decouple-I915_NUM_PLLS-from-PLL-IDs.patch
+	patches.suse/0531-drm-i915-Introduce-for_each_shared_dpll.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
