--- a/series.conf
+++ b/series.conf
@@ -13539,6 +13539,7 @@
 	patches.suse/0529-drm-i915-Stop-requiring-PLL-index-PLL-ID.patch
 	patches.suse/0530-drm-i915-Decouple-I915_NUM_PLLS-from-PLL-IDs.patch
 	patches.suse/0531-drm-i915-Introduce-for_each_shared_dpll.patch
+	patches.suse/0532-drm-i915-s-dev_priv-i915-in-the-shared_dpll-code.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
