--- a/series.conf
+++ b/series.conf
@@ -13540,6 +13540,7 @@
 	patches.suse/0530-drm-i915-Decouple-I915_NUM_PLLS-from-PLL-IDs.patch
 	patches.suse/0531-drm-i915-Introduce-for_each_shared_dpll.patch
 	patches.suse/0532-drm-i915-s-dev_priv-i915-in-the-shared_dpll-code.patch
+	patches.suse/0533-drm-i915-mocs-use-to_gt-instead-of-direct-i915-gt.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
