drm/i915/gt: remove i915->gt0 in favour of i915->gt[0] (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13542,6 +13542,7 @@
 	patches.suse/0532-drm-i915-s-dev_priv-i915-in-the-shared_dpll-code.patch
 	patches.suse/0533-drm-i915-mocs-use-to_gt-instead-of-direct-i915-gt.patch
 	patches.suse/0534-drm-i915-allocate-i915-gt0-dynamically.patch
+	patches.suse/0535-drm-i915-gt-remove-i915-gt0-in-favour-of-i915-gt-0.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
