--- a/series.conf
+++ b/series.conf
@@ -13545,6 +13545,7 @@
 	patches.suse/0535-drm-i915-gt-remove-i915-gt0-in-favour-of-i915-gt-0.patch
 	patches.suse/0536-drm-i915-display-lspcon-Increase-LSPCON-mode-settle-.patch
 	patches.suse/0537-drm-i915-dp_mst-Make-sure-pbn_div-is-up-to-date-afte.patch
+	patches.suse/0538-drm-i915-display-Created-exclusive-version-of-vga-de.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
