drm/i915/pmu: Use local64_try_cmpxchg in i915_pmu_event_read (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13546,6 +13546,7 @@
 	patches.suse/0536-drm-i915-display-lspcon-Increase-LSPCON-mode-settle-.patch
 	patches.suse/0537-drm-i915-dp_mst-Make-sure-pbn_div-is-up-to-date-afte.patch
 	patches.suse/0538-drm-i915-display-Created-exclusive-version-of-vga-de.patch
+	patches.suse/0539-drm-i915-pmu-Use-local64_try_cmpxchg-in-i915_pmu_eve.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
