--- a/series.conf
+++ b/series.conf
@@ -13547,6 +13547,7 @@
 	patches.suse/0537-drm-i915-dp_mst-Make-sure-pbn_div-is-up-to-date-afte.patch
 	patches.suse/0538-drm-i915-display-Created-exclusive-version-of-vga-de.patch
 	patches.suse/0539-drm-i915-pmu-Use-local64_try_cmpxchg-in-i915_pmu_eve.patch
+	patches.suse/0540-drm-i915-fbc-Remove-ancient-16k-plane-stride-limit.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
