--- a/series.conf
+++ b/series.conf
@@ -13549,6 +13549,7 @@
 	patches.suse/0539-drm-i915-pmu-Use-local64_try_cmpxchg-in-i915_pmu_eve.patch
 	patches.suse/0540-drm-i915-fbc-Remove-ancient-16k-plane-stride-limit.patch
 	patches.suse/0541-drm-i915-fbc-Split-plane-stride-checks-per-platform.patch
+	patches.suse/0542-drm-i915-fbc-Split-plane-tiling-checks-per-platform.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
