--- a/series.conf
+++ b/series.conf
@@ -13551,6 +13551,7 @@
 	patches.suse/0541-drm-i915-fbc-Split-plane-stride-checks-per-platform.patch
 	patches.suse/0542-drm-i915-fbc-Split-plane-tiling-checks-per-platform.patch
 	patches.suse/0543-drm-i915-fbc-Split-plane-rotation-checks-per-platfor.patch
+	patches.suse/0544-drm-i915-fbc-Split-plane-pixel-format-checks-per-pla.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
