drm/i915/psr: Unify PSR pre/post plane update hooks (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13553,6 +13553,7 @@
 	patches.suse/0543-drm-i915-fbc-Split-plane-rotation-checks-per-platfor.patch
 	patches.suse/0544-drm-i915-fbc-Split-plane-pixel-format-checks-per-pla.patch
 	patches.suse/0545-drm-i915-fbc-Remove-pointless-stride-is-multiple-of-.patch
+	patches.suse/0546-drm-i915-psr-Unify-PSR-pre-post-plane-update-hooks.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
