--- a/series.conf
+++ b/series.conf
@@ -13554,6 +13554,7 @@
 	patches.suse/0544-drm-i915-fbc-Split-plane-pixel-format-checks-per-pla.patch
 	patches.suse/0545-drm-i915-fbc-Remove-pointless-stride-is-multiple-of-.patch
 	patches.suse/0546-drm-i915-psr-Unify-PSR-pre-post-plane-update-hooks.patch
+	patches.suse/0547-drm-i915-Stop-clobbering-old-crtc-state-during-state.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
