--- a/series.conf
+++ b/series.conf
@@ -13555,6 +13555,7 @@
 	patches.suse/0545-drm-i915-fbc-Remove-pointless-stride-is-multiple-of-.patch
 	patches.suse/0546-drm-i915-psr-Unify-PSR-pre-post-plane-update-hooks.patch
 	patches.suse/0547-drm-i915-Stop-clobbering-old-crtc-state-during-state.patch
+	patches.suse/0548-drm-i915-Constify-the-crtc-states-in-the-DPLL-checke.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
