drm/i915: Constify watermark state checker (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13557,6 +13557,7 @@
 	patches.suse/0547-drm-i915-Stop-clobbering-old-crtc-state-during-state.patch
 	patches.suse/0548-drm-i915-Constify-the-crtc-states-in-the-DPLL-checke.patch
 	patches.suse/0549-drm-i915-Simplify-DPLL-state-checker-calling-convent.patch
+	patches.suse/0550-drm-i915-Constify-watermark-state-checker.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
