drm/i915: Constify the snps/c10x PLL state checkers (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13559,6 +13559,7 @@
 	patches.suse/0549-drm-i915-Simplify-DPLL-state-checker-calling-convent.patch
 	patches.suse/0550-drm-i915-Constify-watermark-state-checker.patch
 	patches.suse/0551-drm-i915-Simplify-watermark-state-checker-calling-co.patch
+	patches.suse/0552-drm-i915-Constify-the-snps-c10x-PLL-state-checkers.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
