--- a/series.conf
+++ b/series.conf
@@ -13560,6 +13560,7 @@
 	patches.suse/0550-drm-i915-Constify-watermark-state-checker.patch
 	patches.suse/0551-drm-i915-Simplify-watermark-state-checker-calling-co.patch
 	patches.suse/0552-drm-i915-Constify-the-snps-c10x-PLL-state-checkers.patch
+	patches.suse/0553-drm-i915-Simplify-snps-c10x-DPLL-state-checker-calli.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
