drm/i915: Constify remainder of the state checker (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13561,6 +13561,7 @@
 	patches.suse/0551-drm-i915-Simplify-watermark-state-checker-calling-co.patch
 	patches.suse/0552-drm-i915-Constify-the-snps-c10x-PLL-state-checkers.patch
 	patches.suse/0553-drm-i915-Simplify-snps-c10x-DPLL-state-checker-calli.patch
+	patches.suse/0554-drm-i915-Constify-remainder-of-the-state-checker.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
