--- a/series.conf
+++ b/series.conf
@@ -13563,6 +13563,7 @@
 	patches.suse/0553-drm-i915-Simplify-snps-c10x-DPLL-state-checker-calli.patch
 	patches.suse/0554-drm-i915-Constify-remainder-of-the-state-checker.patch
 	patches.suse/0555-drm-i915-Simplify-the-state-checker-calling-convetio.patch
+	patches.suse/0556-drm-i915-s-pipe_config-crtc_state-in-the-state-check.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
