drm/i915: s/dev_priv/i915/ in the state checker (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13564,6 +13564,7 @@
 	patches.suse/0554-drm-i915-Constify-remainder-of-the-state-checker.patch
 	patches.suse/0555-drm-i915-Simplify-the-state-checker-calling-convetio.patch
 	patches.suse/0556-drm-i915-s-pipe_config-crtc_state-in-the-state-check.patch
+	patches.suse/0557-drm-i915-s-dev_priv-i915-in-the-state-checker.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
