--- a/series.conf
+++ b/series.conf
@@ -13567,6 +13567,7 @@
 	patches.suse/0557-drm-i915-s-dev_priv-i915-in-the-state-checker.patch
 	patches.suse/0558-drm-i915-ddi-Remove-redundant-intel_connector-NULL-c.patch
 	patches.suse/0559-drm-i915-uapi-fix-doc-typos.patch
+	patches.suse/0560-drm-i915-Fix-VLV-color-state-readout.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
