--- a/series.conf
+++ b/series.conf
@@ -13570,6 +13570,7 @@
 	patches.suse/0560-drm-i915-Fix-VLV-color-state-readout.patch
 	patches.suse/0561-drm-i915-display-Free-crtc_state-in-verify_crtc_stat.patch
 	patches.suse/0562-drm-i915-Add-wrapper-for-getting-display-step.patch
+	patches.suse/0563-drm-i915-xe2lpd-display-capability-register-definiti.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
