drm/i915/xe2lpd: update the dsc feature capability (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13571,6 +13571,7 @@
 	patches.suse/0561-drm-i915-display-Free-crtc_state-in-verify_crtc_stat.patch
 	patches.suse/0562-drm-i915-Add-wrapper-for-getting-display-step.patch
 	patches.suse/0563-drm-i915-xe2lpd-display-capability-register-definiti.patch
+	patches.suse/0564-drm-i915-xe2lpd-update-the-dsc-feature-capability.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
