--- a/series.conf
+++ b/series.conf
@@ -13572,6 +13572,7 @@
 	patches.suse/0562-drm-i915-Add-wrapper-for-getting-display-step.patch
 	patches.suse/0563-drm-i915-xe2lpd-display-capability-register-definiti.patch
 	patches.suse/0564-drm-i915-xe2lpd-update-the-dsc-feature-capability.patch
+	patches.suse/0565-drm-i915-xe2lpd-update-the-scaler-feature-capability.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
