--- a/series.conf
+++ b/series.conf
@@ -13575,6 +13575,7 @@
 	patches.suse/0565-drm-i915-xe2lpd-update-the-scaler-feature-capability.patch
 	patches.suse/0566-drm-i915-gvt-remove-unused-to_gvt-and-reduce-include.patch
 	patches.suse/0567-drm-i915-gvt-don-t-include-gvt.h-from-intel_gvt_mmio.patch
+	patches.suse/0568-drm-i915-gvt-move-struct-engine_mmio-to-mmio_context.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
