--- a/series.conf
+++ b/series.conf
@@ -13577,6 +13577,7 @@
 	patches.suse/0567-drm-i915-gvt-don-t-include-gvt.h-from-intel_gvt_mmio.patch
 	patches.suse/0568-drm-i915-gvt-move-struct-engine_mmio-to-mmio_context.patch
 	patches.suse/0569-drm-i915-gvt-move-structs-intel_gvt_irq_info-and-int.patch
+	patches.suse/0570-drm-i915-drop-Wall-and-related-disables-from-cflags-.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
