drm/i915: enable W=1 warnings by default (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13578,6 +13578,7 @@
 	patches.suse/0568-drm-i915-gvt-move-struct-engine_mmio-to-mmio_context.patch
 	patches.suse/0569-drm-i915-gvt-move-structs-intel_gvt_irq_info-and-int.patch
 	patches.suse/0570-drm-i915-drop-Wall-and-related-disables-from-cflags-.patch
+	patches.suse/0571-drm-i915-enable-W-1-warnings-by-default.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
