--- a/series.conf
+++ b/series.conf
@@ -13579,6 +13579,7 @@
 	patches.suse/0569-drm-i915-gvt-move-structs-intel_gvt_irq_info-and-int.patch
 	patches.suse/0570-drm-i915-drop-Wall-and-related-disables-from-cflags-.patch
 	patches.suse/0571-drm-i915-enable-W-1-warnings-by-default.patch
+	patches.suse/0572-drm-i915-display-Use-intel_crtc_destroy_state-instea.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
