drm/i915/display: Use correct method to free crtc_state (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13580,6 +13580,7 @@
 	patches.suse/0570-drm-i915-drop-Wall-and-related-disables-from-cflags-.patch
 	patches.suse/0571-drm-i915-enable-W-1-warnings-by-default.patch
 	patches.suse/0572-drm-i915-display-Use-intel_crtc_destroy_state-instea.patch
+	patches.suse/0573-drm-i915-display-Use-correct-method-to-free-crtc_sta.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
