--- a/series.conf
+++ b/series.conf
@@ -13582,6 +13582,7 @@
 	patches.suse/0572-drm-i915-display-Use-intel_crtc_destroy_state-instea.patch
 	patches.suse/0573-drm-i915-display-Use-correct-method-to-free-crtc_sta.patch
 	patches.suse/0574-drm-i915-hdcp-Move-checks-for-gsc-health-status.patch
+	patches.suse/0575-drm-i915-hdcp-Move-common-message-filling-function-t.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
