drm/i915/vlv_dsi: Add DMI quirk for backlight control issues on (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13586,6 +13586,7 @@
 	patches.suse/0576-drm-i915-Remove-the-module-parameter-fastboot.patch
 	patches.suse/0577-drm-i915-vlv_dsi-Add-DMI-quirk-for-wrong-panel-model.patch
 	patches.suse/0578-drm-i915-vlv_dsi-Add-DMI-quirk-for-wrong-I2C-bus-and.patch
+	patches.suse/0579-drm-i915-vlv_dsi-Add-DMI-quirk-for-backlight-control.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
