--- a/series.conf
+++ b/series.conf
@@ -13587,6 +13587,7 @@
 	patches.suse/0577-drm-i915-vlv_dsi-Add-DMI-quirk-for-wrong-panel-model.patch
 	patches.suse/0578-drm-i915-vlv_dsi-Add-DMI-quirk-for-wrong-I2C-bus-and.patch
 	patches.suse/0579-drm-i915-vlv_dsi-Add-DMI-quirk-for-backlight-control.patch
+	patches.suse/0580-drm-i915-dsi-Add-some-debug-logging-to-mipi_exec_i2c.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
