drm/i915: Clean steer semaphore on resume (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13590,6 +13590,7 @@
 	patches.suse/0580-drm-i915-dsi-Add-some-debug-logging-to-mipi_exec_i2c.patch
 	patches.suse/0581-drm-i915-Introduce-intel_gt_mcr_lock_sanitize.patch
 	patches.suse/0582-drm-i915-Introduce-the-intel_gt_resume_early.patch
+	patches.suse/0583-drm-i915-Clean-steer-semaphore-on-resume.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
