--- a/series.conf
+++ b/series.conf
@@ -13591,6 +13591,7 @@
 	patches.suse/0581-drm-i915-Introduce-intel_gt_mcr_lock_sanitize.patch
 	patches.suse/0582-drm-i915-Introduce-the-intel_gt_resume_early.patch
 	patches.suse/0583-drm-i915-Clean-steer-semaphore-on-resume.patch
+	patches.suse/0584-drm-i915-mtl-Skip-MCR-ops-for-ring-fault-register.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
