--- a/series.conf
+++ b/series.conf
@@ -13592,6 +13592,7 @@
 	patches.suse/0582-drm-i915-Introduce-the-intel_gt_resume_early.patch
 	patches.suse/0583-drm-i915-Clean-steer-semaphore-on-resume.patch
 	patches.suse/0584-drm-i915-mtl-Skip-MCR-ops-for-ring-fault-register.patch
+	patches.suse/0585-drm-i915-gem-Make-i915_gem_shrinker-multi-gt-aware.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
