drm/i915: Create a kernel context for GGTT updates (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13594,6 +13594,7 @@
 	patches.suse/0584-drm-i915-mtl-Skip-MCR-ops-for-ring-fault-register.patch
 	patches.suse/0585-drm-i915-gem-Make-i915_gem_shrinker-multi-gt-aware.patch
 	patches.suse/0586-drm-i915-Lift-runtime-pm-acquire-callbacks-out-of-in.patch
+	patches.suse/0587-drm-i915-Create-a-kernel-context-for-GGTT-updates.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
