--- a/series.conf
+++ b/series.conf
@@ -13595,6 +13595,7 @@
 	patches.suse/0585-drm-i915-gem-Make-i915_gem_shrinker-multi-gt-aware.patch
 	patches.suse/0586-drm-i915-Lift-runtime-pm-acquire-callbacks-out-of-in.patch
 	patches.suse/0587-drm-i915-Create-a-kernel-context-for-GGTT-updates.patch
+	patches.suse/0588-drm-i915-Implement-for_each_sgt_daddr_next.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
