drm/i915: Enable GGTT updates with binder in MTL (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13599,6 +13599,7 @@
 	patches.suse/0589-drm-i915-Parameterize-binder-context-creation.patch
 	patches.suse/0590-drm-i915-Implement-GGTT-update-method-with-MI_UPDATE.patch
 	patches.suse/0591-drm-i915-Toggle-binder-context-ready-status.patch
+	patches.suse/0592-drm-i915-Enable-GGTT-updates-with-binder-in-MTL.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
