--- a/series.conf
+++ b/series.conf
@@ -13600,6 +13600,7 @@
 	patches.suse/0590-drm-i915-Implement-GGTT-update-method-with-MI_UPDATE.patch
 	patches.suse/0591-drm-i915-Toggle-binder-context-ready-status.patch
 	patches.suse/0592-drm-i915-Enable-GGTT-updates-with-binder-in-MTL.patch
+	patches.suse/0593-drm-i915-Clarify-type-evolution-of-uabi_node-uabi_en.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
