--- a/series.conf
+++ b/series.conf
@@ -13602,6 +13602,7 @@
 	patches.suse/0592-drm-i915-Enable-GGTT-updates-with-binder-in-MTL.patch
 	patches.suse/0593-drm-i915-Clarify-type-evolution-of-uabi_node-uabi_en.patch
 	patches.suse/0594-drm-i915-guc-Suppress-ignoring-reset-notification-me.patch
+	patches.suse/0595-drm-i915-guc-Update-recommended-version-to-70.12.1-f.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
