--- a/series.conf
+++ b/series.conf
@@ -13604,6 +13604,7 @@
 	patches.suse/0594-drm-i915-guc-Suppress-ignoring-reset-notification-me.patch
 	patches.suse/0595-drm-i915-guc-Update-recommended-version-to-70.12.1-f.patch
 	patches.suse/0596-drm-i915-guc-Annotate-struct-ct_incoming_msg-with-__.patch
+	patches.suse/0597-drm-i915-guc-Enable-WA-14018913170.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
