drm/i915/gt: More use of GT specific print helpers (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13605,6 +13605,7 @@
 	patches.suse/0595-drm-i915-guc-Update-recommended-version-to-70.12.1-f.patch
 	patches.suse/0596-drm-i915-guc-Annotate-struct-ct_incoming_msg-with-__.patch
 	patches.suse/0597-drm-i915-guc-Enable-WA-14018913170.patch
+	patches.suse/0598-drm-i915-gt-More-use-of-GT-specific-print-helpers.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
