--- a/series.conf
+++ b/series.conf
@@ -13606,6 +13606,7 @@
 	patches.suse/0596-drm-i915-guc-Annotate-struct-ct_incoming_msg-with-__.patch
 	patches.suse/0597-drm-i915-guc-Enable-WA-14018913170.patch
 	patches.suse/0598-drm-i915-gt-More-use-of-GT-specific-print-helpers.patch
+	patches.suse/0599-drm-i915-More-use-of-GT-specific-print-helpers.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
