accel/habanalabs: add tsc clock sampling to clock sync info (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13608,6 +13608,7 @@
 	patches.suse/0598-drm-i915-gt-More-use-of-GT-specific-print-helpers.patch
 	patches.suse/0599-drm-i915-More-use-of-GT-specific-print-helpers.patch
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
+	patches.suse/0600-accel-habanalabs-add-tsc-clock-sampling-to-clock-syn.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
