--- a/series.conf
+++ b/series.conf
@@ -13610,6 +13610,7 @@
 	patches.suse/accel-habanalabs-gaudi2-Fix-incorrect-string-length-.patch
 	patches.suse/0600-accel-habanalabs-add-tsc-clock-sampling-to-clock-syn.patch
 	patches.suse/0601-accel-habanalabs-change-Greco-to-Gaudi2.patch
+	patches.suse/0602-drm-amd-amdgpu-Use-kmemdup-to-simplify-kmalloc-and-m.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
