drm/amdgpu: Keep reset handlers shared (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13611,6 +13611,7 @@
 	patches.suse/0600-accel-habanalabs-add-tsc-clock-sampling-to-clock-syn.patch
 	patches.suse/0601-accel-habanalabs-change-Greco-to-Gaudi2.patch
 	patches.suse/0602-drm-amd-amdgpu-Use-kmemdup-to-simplify-kmalloc-and-m.patch
+	patches.suse/0603-drm-amdgpu-Keep-reset-handlers-shared.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
