--- a/series.conf
+++ b/series.conf
@@ -13613,6 +13613,7 @@
 	patches.suse/0602-drm-amd-amdgpu-Use-kmemdup-to-simplify-kmalloc-and-m.patch
 	patches.suse/0603-drm-amdgpu-Keep-reset-handlers-shared.patch
 	patches.suse/0604-drm-amd-display-Fix-unnecessary-conversion-to-bool-i.patch
+	patches.suse/0605-drm-radeon-Cleanup-radeon-radeon_fence.c.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
