drm/amd/display: PQ tail accuracy (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13616,6 +13616,7 @@
 	patches.suse/0605-drm-radeon-Cleanup-radeon-radeon_fence.c.patch
 	patches.suse/0606-drm-amd-display-Fix-useless-else-if-in-display_mode_.patch
 	patches.suse/0607-drm-amd-display-Expose-mall-capability.patch
+	patches.suse/0608-drm-amd-display-PQ-tail-accuracy.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
