--- a/series.conf
+++ b/series.conf
@@ -13617,6 +13617,7 @@
 	patches.suse/0606-drm-amd-display-Fix-useless-else-if-in-display_mode_.patch
 	patches.suse/0607-drm-amd-display-Expose-mall-capability.patch
 	patches.suse/0608-drm-amd-display-PQ-tail-accuracy.patch
+	patches.suse/0609-drm-amd-display-PQ-regamma-end-point.patch
 	patches.suse/drm-amd-display-Refactor-edp-power-control.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
