drm/amdgpu: use 6.1.0 register offset for HDP CLK_CNTL (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13622,6 +13622,7 @@
 	patches.suse/0611-drm-amd-display-Enable-runtime-register-offset-init-.patch
 	patches.suse/0612-drm-amd-display-Write-flip-addr-to-scratch-reg-for-s.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
+	patches.suse/0614-drm-amdgpu-use-6.1.0-register-offset-for-HDP-CLK_CNT.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
