--- a/series.conf
+++ b/series.conf
@@ -13623,6 +13623,7 @@
 	patches.suse/0612-drm-amd-display-Write-flip-addr-to-scratch-reg-for-s.patch
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
 	patches.suse/0614-drm-amdgpu-use-6.1.0-register-offset-for-HDP-CLK_CNT.patch
+	patches.suse/0615-drm-amdgpu-add-new-AMDGPU_FAMILY-definition.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
