drm/amdgpu/soc21: add initial GC 11.5.0 soc21 support (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13624,6 +13624,7 @@
 	patches.suse/drm-radeon-possible-buffer-overflow.patch
 	patches.suse/0614-drm-amdgpu-use-6.1.0-register-offset-for-HDP-CLK_CNT.patch
 	patches.suse/0615-drm-amdgpu-add-new-AMDGPU_FAMILY-definition.patch
+	patches.suse/0616-drm-amdgpu-soc21-add-initial-GC-11.5.0-soc21-support.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
