--- a/series.conf
+++ b/series.conf
@@ -13627,6 +13627,7 @@
 	patches.suse/0616-drm-amdgpu-soc21-add-initial-GC-11.5.0-soc21-support.patch
 	patches.suse/0617-drm-amdgpu-discovery-enable-soc21-support.patch
 	patches.suse/0618-drm-amdgpu-add-nbio-7.11-registers.patch
+	patches.suse/0619-drm-amdgpu-add-nbio-7.11-support.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
