drm/amdgpu: add gc headers for gc 11.5.0 (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13629,6 +13629,7 @@
 	patches.suse/0618-drm-amdgpu-add-nbio-7.11-registers.patch
 	patches.suse/0619-drm-amdgpu-add-nbio-7.11-support.patch
 	patches.suse/0620-drm-amdgpu-discovery-add-nbio-7.11.0-support.patch
+	patches.suse/0621-drm-amdgpu-add-gc-headers-for-gc-11.5.0.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
