--- a/series.conf
+++ b/series.conf
@@ -13631,6 +13631,7 @@
 	patches.suse/0620-drm-amdgpu-discovery-add-nbio-7.11.0-support.patch
 	patches.suse/0621-drm-amdgpu-add-gc-headers-for-gc-11.5.0.patch
 	patches.suse/0622-drm-amdgpu-gmc11-initialize-GMC-for-GC-11.5.0-memory.patch
+	patches.suse/0623-drm-amdgpu-gfx11-initialize-gfx11.5.0.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
