--- a/series.conf
+++ b/series.conf
@@ -13633,6 +13633,7 @@
 	patches.suse/0622-drm-amdgpu-gmc11-initialize-GMC-for-GC-11.5.0-memory.patch
 	patches.suse/0623-drm-amdgpu-gfx11-initialize-gfx11.5.0.patch
 	patches.suse/0624-drm-amdgpu-add-golden-setting-for-gc_11_5_0.patch
+	patches.suse/0625-drm-amdkfd-add-KFD-support-for-GC-11.5.0.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
