drm/amdgpu/discovery: enable mes block for gc 11.5.0 (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13636,6 +13636,7 @@
 	patches.suse/0625-drm-amdkfd-add-KFD-support-for-GC-11.5.0.patch
 	patches.suse/0626-drm-amdgpu-add-imu-firmware-support-for-gc_11_5_0.patch
 	patches.suse/0627-drm-amdgpu-add-mes-firmware-support-for-gc_11_5_0.patch
+	patches.suse/0628-drm-amdgpu-discovery-enable-mes-block-for-gc-11.5.0.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
