--- a/series.conf
+++ b/series.conf
@@ -13638,6 +13638,7 @@
 	patches.suse/0627-drm-amdgpu-add-mes-firmware-support-for-gc_11_5_0.patch
 	patches.suse/0628-drm-amdgpu-discovery-enable-mes-block-for-gc-11.5.0.patch
 	patches.suse/0629-drm-amdgpu-discovery-enable-gfx11-for-GC-11.5.0.patch
+	patches.suse/0630-drm-amdgpu-add-mmhub-3.3.0-headers.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
