drm/amd/display: add check for PMFW hard min request complete (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13643,6 +13643,7 @@
 	patches.suse/0632-drm-amdgpu-enable-gmc11-for-GC-11.5.0.patch
 	patches.suse/0633-drm-amdgpu-add-gfxhub-11.5.0-support.patch
 	patches.suse/0634-drm-amd-display-Save-addr-update-in-scratch-before-f.patch
+	patches.suse/0635-drm-amd-display-add-check-for-PMFW-hard-min-request-.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
