--- a/series.conf
+++ b/series.conf
@@ -13644,6 +13644,7 @@
 	patches.suse/0633-drm-amdgpu-add-gfxhub-11.5.0-support.patch
 	patches.suse/0634-drm-amd-display-Save-addr-update-in-scratch-before-f.patch
 	patches.suse/0635-drm-amd-display-add-check-for-PMFW-hard-min-request-.patch
+	patches.suse/0636-drm-amd-display-ensure-FS-is-enabled-before-sending-.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
