--- a/series.conf
+++ b/series.conf
@@ -13645,6 +13645,7 @@
 	patches.suse/0634-drm-amd-display-Save-addr-update-in-scratch-before-f.patch
 	patches.suse/0635-drm-amd-display-add-check-for-PMFW-hard-min-request-.patch
 	patches.suse/0636-drm-amd-display-ensure-FS-is-enabled-before-sending-.patch
+	patches.suse/0637-drm-amd-display-FW-Promotion-Release-0.0.180.0.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
