drm/amd/display: 3.2.248 (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13646,6 +13646,7 @@
 	patches.suse/0635-drm-amd-display-add-check-for-PMFW-hard-min-request-.patch
 	patches.suse/0636-drm-amd-display-ensure-FS-is-enabled-before-sending-.patch
 	patches.suse/0637-drm-amd-display-FW-Promotion-Release-0.0.180.0.patch
+	patches.suse/0638-drm-amd-display-3.2.248.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
