drm/amd/pm: correct SMU13 gfx voltage related OD settings (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13653,6 +13653,7 @@
 	patches.suse/0642-drm-amd-pm-Fixes-incorrect-type-in-amdgpu_hwmon_show.patch
 	patches.suse/0643-drm-amd-pm-Vangogh-Get-average_-from-average-field-o.patch
 	patches.suse/0644-drm-amdgpu-pm-Remove-the-duplicate-dpm-status-check.patch
+	patches.suse/0645-drm-amd-pm-correct-SMU13-gfx-voltage-related-OD-sett.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
