drm/amdgpu: Remove amdgpu_bo_list_array_entry() (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13659,6 +13659,7 @@
 	patches.suse/0648-drm-amdgpu-Allow-issue-disable-gfx-ras-cmd-to-firmwa.patch
 	patches.suse/0649-drm-amdgpu-Explicitly-add-a-flexible-array-at-the-en.patch
 	patches.suse/0650-drm-amdgpu-Remove-a-redundant-sanity-check.patch
+	patches.suse/0651-drm-amdgpu-Remove-amdgpu_bo_list_array_entry.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
