drm/amd/amdgpu/amdgpu_device: Provide suitable description for param (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13663,6 +13663,7 @@
 	patches.suse/0652-drm-amdgpu-Use-kvzalloc-to-simplify-code.patch
 	patches.suse/0653-drm-amd-Fix-spelling-mistake-throtting-throttling.patch
 	patches.suse/0654-drm-radeon-radeon_ttm-Remove-unused-variable-rbo-fro.patch
+	patches.suse/0655-drm-amd-amdgpu-amdgpu_device-Provide-suitable-descri.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
