drm/amd/display: add new resource interface for acquiring sec opp (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13672,6 +13672,7 @@
 	patches.suse/0661-drm-amd-display-Add-support-for-1080p-SubVP-to-reduc.patch
 	patches.suse/0662-drm-amd-display-add-comments-to-add-plane-functions.patch
 	patches.suse/0663-drm-amd-display-rename-function-to-add-otg-master-fo.patch
+	patches.suse/0664-drm-amd-display-add-new-resource-interface-for-acqui.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
