drm/amd/display: switch to new ODM policy for windowed MPO ODM (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13676,6 +13676,7 @@
 	patches.suse/0665-drm-amd-display-add-new-resource-interfaces-to-updat.patch
 	patches.suse/0666-drm-amd-display-add-more-pipe-resource-interfaces.patch
 	patches.suse/0667-drm-amd-display-use-new-pipe-allocation-interface-in.patch
+	patches.suse/0668-drm-amd-display-switch-to-new-ODM-policy-for-windowe.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
