drm/amd/display: correct z8_watermark 16bit to 20bit mask (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13680,6 +13680,7 @@
 	patches.suse/0669-drm-amd-display-add-pipe-topology-update-log.patch
 	patches.suse/0670-drm-amd-display-Skip-dmub-memory-flush-when-not-need.patch
 	patches.suse/0671-drm-amd-display-Fix-incorrect-comment.patch
+	patches.suse/0672-drm-amd-display-correct-z8_watermark-16bit-to-20bit-.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
