drm/amd/display: fix pipe topology logging error (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13682,6 +13682,7 @@
 	patches.suse/0671-drm-amd-display-Fix-incorrect-comment.patch
 	patches.suse/0672-drm-amd-display-correct-z8_watermark-16bit-to-20bit-.patch
 	patches.suse/0673-drm-amd-display-Add-debugfs-interface-for-ODM-combin.patch
+	patches.suse/0674-drm-amd-display-fix-pipe-topology-logging-error.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
