drm/amd/display: Update dc.h for DCN35 support (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13695,6 +13695,7 @@
 	patches.suse/0684-drm-amd-display-Update-DCN31-for-DCN35-support.patch
 	patches.suse/0685-drm-amd-display-Update-DCN314-for-DCN35-support.patch
 	patches.suse/0686-drm-amd-display-Update-DCN32-for-DCN35-support.patch
+	patches.suse/0687-drm-amd-display-Update-dc.h-for-DCN35-support.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
