drm/amd/display: Add DCN35 OPP (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13702,6 +13702,7 @@
 	patches.suse/0691-drm-amd-display-Add-DCN35-DIO.patch
 	patches.suse/0692-drm-amd-display-Add-DCN35-PG_CNTL.patch
 	patches.suse/0693-drm-amd-display-Add-DCN35-OPTC.patch
+	patches.suse/0694-drm-amd-display-Add-DCN35-OPP.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
