drm/amd/display: Add DCN35 HUBBUB (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13706,6 +13706,7 @@
 	patches.suse/0695-drm-amd-display-Add-DCN35-DPP.patch
 	patches.suse/0696-drm-amd-display-Add-DCN35-DWB.patch
 	patches.suse/0697-drm-amd-display-Add-DCN35-HUBP.patch
+	patches.suse/0698-drm-amd-display-Add-DCN35-HUBBUB.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
